1.7.2:
	Support libspf2 (Eugene Crosser)
	Build with Solaris' lex
1.7.1:
	Null after 1.6 tag release to help patch contributions
1.6:
	New stable branch
	Missing flags in milter-greylist usage display
	Gentoo startup sript (Stephane Lentz)
	rc-linux.sh was renamed rc-redhat.sh
1.5.12:
	More broken servers in the default config file
	Fix wrong sync queue counter computations (Attila Bruncsak)
	Add a -c option to just check the config and exit (Klas Heggemann)
1.5.11:
	Don't block threads while reloading config (Attila Bruncsak)
	Allow regex with # in the configuration (Hajimu Umemoto)
	Ignore self as sync peer (Matthias Scheler and Hajimu Umemoto)
	Document ressource shortage for memory and file descriptor
	Remove outdated documentation about IPv6
1.5.10:
	Fix a build problem on systems that don't have IPv6 (Hajimu Umemoto)
	Fix a minor bug with SPF (Hajimu Umemoto)
1.5.9:
	Give credits to the various contributors in the man pages
	Do not match bogus IPv6 addresses in the dump file (Hajimu Umemoto)
	Quick statistics at the end of the dump file (Remy Card)
	Fix build on Tru64 Unix, including for IPv6 (Attila Bruncsak)
	Fix a SPF log problem (Alexandre Cherif)
1.5.8:
	Fix a bug in configure.ac (Hajimu Umemoto)
1.5.7:
	malloc e-mail addresses, avoids truncation at 32 chars (Hajimu Umemoto)
1.5.6:
	Configurable MX sync bind port and address (Cyril Guibourg)
1.5.5:
	Disable getnameinfo as in causes an ABI clash in Linux
	Fix bad substitutions in rc scripts
	Fix build problems on Solaris
1.5.4:
	Avoid race conditions when reloading the config (Attila Bruncsak)
	Full blown IPv6 support, from Hajimu Umemoto
	rc-debian.sh script, from Joel Bertrand
1.5.3:
	Fix unproper MX sync port on little endian machines
1.5.2:
	Add a template Makefile to manually tweak if configure fails
	Feed strtkok_r with a NULL initialized pointer
	More mixed I/O fix: another fflush after a fgets() 
1.5.1:
	Fix mixed I/O in MX sync on Solaris, from Attila Bruncsak