@@ -1,9 +1,9 @@
 /* config.h.  Generated by configure.  */
 /* config.h.in.  Generated from configure.ac by autoheader.  */
-/* $Id: config.h,v 1.11 2004/12/06 21:49:33 manu Exp $ */
+/* $Id: config.h,v 1.12 2004/12/08 22:23:09 manu Exp $ */
 
 /* Build environnement */
-#define BUILD_ENV "manu@plan:/usr/home/manu/milter-greylist Mon Dec  6 22:48:46 CET 2004"
+#define BUILD_ENV "manu@plan:/usr/home/manu/milter-greylist Wed Dec  8 23:18:05 CET 2004"
 
 /* Define to 1 if you have the <arpa/inet.h> header file. */
 #define HAVE_ARPA_INET_H 1
@@ -12,7 +12,7 @@
 /* #undef HAVE_BROKEN_RCSID */
 
 /* broken rwlock in libpthread */
-#define HAVE_BROKEN_RWLOCK 
+/* #undef HAVE_BROKEN_RWLOCK */
 
 /* Define to 1 if you have the `bzero' function. */
 #define HAVE_BZERO 1
